--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,22 @@ language: java
 sudo: false
 jdk:
 - oraclejdk8
+env:
+  matrix:
+    - ENGINE=lucee@4.5
+    - ENGINE=lucee@5-SNAPSHOT
 before_install:
 - mkdir /tmp/bin
 - export PATH=$PATH:/tmp/bin
 install:
-- curl --location 'https://www.ortussolutions.com/parent/download/commandbox/type/bin' -o /tmp/box.zip
+- curl --location 'http://integration.stg.ortussolutions.com/artifacts/ortussolutions/commandbox/3.1.0/commandbox-bin-3.1.0.zip' -o /tmp/box.zip
 - unzip /tmp/box.zip -d /tmp/bin
 - /tmp/bin/box install
 before_script:
-- chmod +x test.sh
-script:
-- "./test.sh"
+- box server start cfengine=$ENGINE port=8500
+script: >
+  testResults="$(box testbox run runner='http://127.0.0.1:8500/tests/runner.cfm' )";
+  echo "$testResults";
+  if grep -i "\[(Failures|Errors): [1-9][0-9]\?[0-9]\?\]\|\[Errors: [1-9][0-9]\?[0-9]\?\]\|<t[^>]*>\|<b[^>]*>" <<< $testResults;  then exit 1; fi
 notifications:
     email: false
